--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
               <h4 class="h4 timeline-item-title">PT. RENUS (Renergy Global Indonesia)</h4>
 
               <span>February 2021 — Agustus 2021</span>
-              membuat daftar logistik untuk perakitan, membuat laporan keuangan dan membuat laporan project.
+             
               <p class="timeline-text">
                 > Design and Create an Automatic Temperature Detection System during The Covid19 Pandemic.
               </p>
@@ -463,7 +463,7 @@
                 > Successfully Completed for Goverment Agencies such as, East Java BPBD, Surabaya BPSDM, Pasuruan City Goverment, etc.
               </p>
               <p class="timeline-text">
-                > membuat daftar logistik untuk perakitan, membuat laporan keuangan dan membuat laporan project.
+                > Make a list of logistics for assembly, make financial reports and make project reports.
               </p>
 
               <p class="timeline-text">
@@ -710,7 +710,7 @@
           <ul class="project-list">
           <!-- project 1 -->
             <li class="project-item  active" data-filter-item data-category="Video">
-              <a href="https://raw.githubusercontent.com/ilhamyudho/resume/main/images/Photos-001/Project-1.jpg" target="_blank">
+              <a href="" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -728,7 +728,7 @@
             </li>
           
             <li class="project-item  active" data-filter-item data-category="Photo">
-              <a href="https://raw.githubusercontent.com/ilhamyudho/resume/main/images/Photos-001/Project-2.jpg" target="_blank">
+              <a href="#" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -746,7 +746,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="https://raw.githubusercontent.com/ilhamyudho/resume/main/images/Photos-001/Project-3.jpg" target="_blank">
+              <a href="#" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -764,7 +764,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="https://raw.githubusercontent.com/ilhamyudho/resume/main/images/Photos-001/Project-4.jpg" target="_blank">
+              <a href="#" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -782,7 +782,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="https://raw.githubusercontent.com/ilhamyudho/resume/main/images/Photos-001/project-5.jpg" target="_blank">
+              <a href="#" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -800,7 +800,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="https://raw.githubusercontent.com/ilhamyudho/resume/main/images/Photos-001/Project-6.jpg" target="_blank">
+              <a href="#" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -818,7 +818,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://raw.githubusercontent.com/ilhamyudho/resume/main/images/Photos-001/Project-7.jpg" target="_blank">
+              <a href="#" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -836,7 +836,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="https://raw.githubusercontent.com/ilhamyudho/resume/main/images/Photos-001/Project-8.jpg" target="_blank">
+              <a href="#" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -854,7 +854,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://raw.githubusercontent.com/ilhamyudho/resume/main/images/Photos-001/Project-9.jpg" target="_blank">
+              <a href="#" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -871,7 +871,7 @@
               </a>
             </li>
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://raw.githubusercontent.com/ilhamyudho/resume/main/images/Photos-001/Project-10.jpg" target="_blank">
+              <a href="#" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -888,7 +888,7 @@
               </a>
             </li>
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://raw.githubusercontent.com/ilhamyudho/resume/main/images/Photos-001/Project-11.jpg" target="_blank">
+              <a href="#" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -905,7 +905,7 @@
               </a>
             </li>
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://raw.githubusercontent.com/ilhamyudho/resume/main/images/Photos-001/Project-12.jpg" target="_blank">
+              <a href="#" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -939,7 +939,7 @@
               </a>
             </li>
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://raw.githubusercontent.com/ilhamyudho/resume/main/images/Photos-001/Project-14.jpg" target="_blank">
+              <a href="#" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -956,7 +956,7 @@
               </a>
             </li>
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://raw.githubusercontent.com/ilhamyudho/resume/main/images/Photos-001/Project-15.jpg" target="_blank">
+              <a href="#" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -973,7 +973,7 @@
               </a>
             </li>
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://raw.githubusercontent.com/ilhamyudho/resume/main/images/Photos-001/Project-16.jpg" target="_blank">
+              <a href="#" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -990,7 +990,7 @@
               </a>
             </li>
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://raw.githubusercontent.com/ilhamyudho/resume/main/images/Photos-001/Project-17.jpg" target="_blank">
+              <a href="#" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
