--- a/index.html
+++ b/index.html
@@ -666,14 +666,16 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Photo</button>
+              <button data-filter-btn>Web design</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Video</button>
+              <button data-filter-btn>Applications</button>
             </li>
 
-            
+            <li class="filter-item">
+              <button data-filter-btn>Web development</button>
+            </li>
 
           </ul>
 
@@ -696,11 +698,15 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Photo</button>
+                <button data-select-item>Web design</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Video</button>
+                <button data-select-item>Applications</button>
+              </li>
+
+              <li class="select-item">
+                <button data-select-item>Web development</button>
               </li>
 
             </ul>
@@ -708,301 +714,165 @@
           </div>
 
           <ul class="project-list">
-          <!-- project 1 -->
-            <li class="project-item  active" data-filter-item data-category="Video">
-              <a href="" target="_blank">
+
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="#">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Photos-001/Project-1.jpg" class="img" alt="finance" loading="lazy">
+                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Final Project</h3>
+                <h3 class="project-title">Finance</h3>
 
-                <p class="project-category">Drone Balance using ZN PID</p>
+                <p class="project-category">Web development</p>
 
               </a>
             </li>
-          
-            <li class="project-item  active" data-filter-item data-category="Photo">
-              <a href="#" target="_blank">
+
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="#">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Photos-001/Project-2.jpg" alt="orizon" loading="lazy">
+                  <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">PCB Design</h3>
+                <h3 class="project-title">Orizon</h3>
 
-                <p class="project-category">Making PCB for power supply</p>
+                <p class="project-category">Web development</p>
 
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#" target="_blank">
+              <a href="#">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Photos-001/Project-3.jpg" alt="fundo" loading="lazy">
+                  <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Human Machine Interface</h3>
+                <h3 class="project-title">Fundo</h3>
 
-                <p class="project-category">Create serial master and slave commutation for the HMI system</p>
+                <p class="project-category">Web design</p>
 
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#" target="_blank">
+              <a href="#">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Photos-001/Project-4.jpg" alt="brawlhalla" loading="lazy">
+                  <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Blood pressure and oxygen test kits</h3>
+                <h3 class="project-title">Brawlhalla</h3>
 
-                <p class="project-category"></p>
+                <p class="project-category">Applications</p>
 
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#" target="_blank">
+              <a href="#">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Photos-001/project-5.jpg" alt="dsm." loading="lazy">
+                  <img src="./assets/images/project-5.png" alt="dsm." loading="lazy">
                 </figure>
 
-                <h3 class="project-title">automatic Temperature detection unit</h3>
+                <h3 class="project-title">DSM.</h3>
 
-                <p class="project-category">5 Unit BPSDM Surabaya</p>
+                <p class="project-category">Web design</p>
 
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#" target="_blank">
+              <a href="#">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Photos-001/Project-6.jpg" alt="metaspark" loading="lazy">
+                  <img src="./assets/images/project-6.png" alt="metaspark" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Automatic Temperature detection unit</h3>
+                <h3 class="project-title">MetaSpark</h3>
 
-                <p class="project-category">Unit Delivery</p>
+                <p class="project-category">Web design</p>
 
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#" target="_blank">
+              <a href="#">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Photos-001/Project-7.jpg" alt="summary" loading="lazy">
+                  <img src="./assets/images/project-7.png" alt="summary" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Automatic Temperature detection unit</h3>
+                <h3 class="project-title">Summary</h3>
 
-                <p class="project-category">BPSD Surabaya</p>
+                <p class="project-category">Web development</p>
 
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#" target="_blank">
+              <a href="#">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Photos-001/Project-8.jpg" alt="task manager" loading="lazy">
+                  <img src="./assets/images/project-8.jpg" alt="task manager" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Automatic Temperature detection unit</h3>
+                <h3 class="project-title">Task Manager</h3>
 
-                <p class="project-category">Maintenance Unit</p>
+                <p class="project-category">Applications</p>
 
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#" target="_blank">
+              <a href="#">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Photos-001/Project-9.jpg" alt="arrival" loading="lazy">
+                  <img src="./assets/images/project-9.png" alt="arrival" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Soral Panel</h3>
+                <h3 class="project-title">Arrival</h3>
 
-                <p class="project-category">Assemble DC combiner and AC combiner Panel Boxt</p>
-
-              </a>
-            </li>
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#" target="_blank">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/Photos-001/Project-10.jpg" alt="arrival" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Modules Trainer Photovoltaic</h3>
-
-                <p class="project-category"></p>
-
-              </a>
-            </li>
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#" target="_blank">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/Photos-001/Project-11.jpg" alt="arrival" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Automatic Temperature detection unit</h3>
-
-                <p class="project-category">Testing Unit</p>
-
-              </a>
-            </li>
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#" target="_blank">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/Photos-001/Project-12.jpg" alt="arrival" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Automatic Temperature detection unit</h3>
-
-                <p class="project-category">Home Use Order</p>
-
-              </a>
-            </li>
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://www.dropbox.com/s/qtr079xmk7gg5eg/video_20210603_225041.mp4?dl=0" target="_blank">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/Photos-001/Project-13.jpg" alt="arrival" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Automatic Temperature detection unit</h3>
-
-                <p class="project-category">Unit Gate PEMPROV JATIM</p>
-
-              </a>
-            </li>
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#" target="_blank">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/Photos-001/Project-14.jpg" alt="arrival" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Automatic Temperature detection unit</h3>
-
-                <p class="project-category">Unit PUPR Surabaya</p>
-
-              </a>
-            </li>
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#" target="_blank">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/Photos-001/Project-15.jpg" alt="arrival" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Automatic Temperature detection unit</h3>
-
-                <p class="project-category">3 Unit PEMKOT Blitar</p>
-
-              </a>
-            </li>
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#" target="_blank">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/Photos-001/Project-16.jpg" alt="arrival" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Automatic Temperature detection unit</h3>
-
-                <p class="project-category">Online Order</p>
-
-              </a>
-            </li>
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#" target="_blank">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/Photos-001/Project-17.jpg" alt="arrival" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Automatic Temperature detection unit</h3>
-
-                <p class="project-category">Unit Gate RSUD Dr. Soetomo</p>
+                <p class="project-category">Web development</p>
 
               </a>
             </li>
